manifests/bootstrapping/garage/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: garage
  name: garage
