manifests/bootstrapping/garage/garage-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  name: garage
  namespace: garage
spec:
  hostnames:
    - s3.blunders.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage
          namespace: garage
          port: 3900
          weight: 1
